# stellar

./: .gitignore  _qterm.py  basic_term.py  config.toml  glterm.py  main.py  moderm.py  pyproject.toml  qterm.py  requirements.txt  structuer.txt
docs/: README.md  architecture.md
engines/: tkinter_engine.py
rustellar/: package.json  pnpm-lock.yaml
rustellar/.svelte-kit/: ambient.d.ts
rustellar/src/: app.html
rustellar/src-tauri/: Cargo.toml  tauri.conf.json
rustellar/src-tauri/src/: main.rs
rustellar/src/routes/: +page.svelte
stellar/components/: ansi.py  ansi_parser.py  command_manager.py  cursor.py  emulator.py  prompt.py  st_pty.py
stellar/engines/: tkinter.py
stellar/gui/: __init__.py  dear.py  fps_counter.py  pyqt6.py  tkinter.py
stellar/input/: keyboard_handler.py
stellar/interfaces/: __init__.py  input.py  renderer.py  typings.py  window.py
stellar/plugins/: base.py  manager.py  prompt_formatter.py
stellar/pty/: pty_handler.py
stellar/renderer/: __init__.py  default-old.py  default.py  new.py  sdl.py
stellar/setings/: config.py  themes.py
stellar/settings/: config.py  themes.py
stellar/themes/: tokyonight-moon.toml  tokyonight.toml
stellar/utils/: ansi_parser.py  logger.py
